[package]
authors = ["The Rust Project Developers"]
name = "geobacter"
version = "0.0.0"
edition = "2018"

[lib]
name = "geobacter"
path = "lib.rs"
crate-type = ["dylib"]

[dependencies]
rustc_ast = { path = "../librustc_ast" }
rustc_ast_lowering = { path = "../librustc_ast_lowering" }
rustc_ast_passes = { path = "../librustc_ast_passes" }
rustc_attr = { path = "../librustc_attr" }
rustc_builtin_macros = { path = "../librustc_builtin_macros" }
rustc_codegen_llvm = { path = "../librustc_codegen_llvm", optional = true }
rustc_codegen_ssa = { path = "../librustc_codegen_ssa" }
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_errors = { path = "../librustc_errors" }
rustc_expand = { path = "../librustc_expand" }
rustc_geobacter = { path = "../librustc_geobacter" }
rustc_hir = { path = "../librustc_hir" }
rustc_incremental = { path = "../librustc_incremental" }
rustc_index = { path = "../librustc_index" }
rustc_infer = { path = "../librustc_infer" }
rustc_lint = { path = "../librustc_lint" }
rustc_metadata = { path = "../librustc_metadata" }
rustc_middle = { path = "../librustc_middle" }
rustc_mir = { path = "../librustc_mir" }
rustc_mir_build = { path = "../librustc_mir_build" }
rustc_parse = { path = "../librustc_parse" }
rustc_passes = { path = "../librustc_passes" }
rustc_plugin_impl = { path = "../librustc_plugin_impl" }
rustc_privacy = { path = "../librustc_privacy" }
rustc_resolve = { path = "../librustc_resolve" }
rustc_serialize = { path = "../libserialize", package = "serialize" }
rustc_session = { path = "../librustc_session" }
rustc_span = { path = "../librustc_span" }
rustc_symbol_mangling = { path = "../librustc_symbol_mangling" }
rustc_trait_selection = { path = "../librustc_trait_selection" }
rustc_traits = { path = "../librustc_traits" }
rustc_ty = { path = "../librustc_ty" }
rustc_typeck = { path = "../librustc_typeck" }
any_key = "0.1.1"
crossbeam-utils = "0.7.0"
erased-serde = "0.3.9"
flate2 = "1.0.1"
goblin = "0.2.1"
indexed_vec = "1.2.1"
log = "0.4.7"
memmap = "0.7.0"
owning_ref = "0.4.0"
parking_lot = "0.10.0"
rayon = { version = "0.3.0", package = "rustc-rayon" }
seahash = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"

[dev-dependencies]
lazy_static = "1.4.0"
env_logger = "0.7.1"
